Added Functional Requirements to the Read.md and slight appConfig changes

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,12 +1,13 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "Microsoft.AspnetCore": "Warning"
     }
   },
   "NotificationOptions": {
-      "WhenUserAdded" : true,
-      "WhenPlayerAdded" : true
+      "WhenUserCreated" : true,
+      "WhenUserAddedToLeague" : true
     } ,
   "MessagingOptions" : {
     "BusName" : "pickles-app-messagebus-dev"
