--- a/src/Infrastructure.DotNet/Infrastructure.DotNet.csproj
+++ b/src/Infrastructure.DotNet/Infrastructure.DotNet.csproj
@@ -10,7 +10,12 @@
 
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
+
+
 
 </Project>
