--- a/src/Infrastructure.DotNet/Infrastructure.DotNet.csproj
+++ b/src/Infrastructure.DotNet/Infrastructure.DotNet.csproj
@@ -13,7 +13,22 @@
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\Domain.Abstractions\Domain.Abstractions.csproj" />
+    </ItemGroup>
+
+
+
+
+
+    <ItemGroup>
+      <Folder Include="Config\" />
     </ItemGroup>
 
 
