--- a/src/Infrastructure.Aws/Infrastructure.Aws.csproj
+++ b/src/Infrastructure.Aws/Infrastructure.Aws.csproj
@@ -10,10 +10,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Domain.Abstractions\Domain.Abstractions.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="Amazon.Lambda.CloudWatchEvents" Version="4.3.0" />
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AWSSDK.CloudWatchEvents" Version="3.7.201.5" />
@@ -32,6 +28,11 @@
       <Reference Include="AwsLambdaDotnetPoc.Domain.Abstractions">
         <HintPath>..\Domain.Abstractions\bin\Debug\net6.0\AwsLambdaDotnetPoc.Domain.Abstractions.dll</HintPath>
       </Reference>
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
 
