Added simple domain for Players and Clubs, along with their controllers.
Added aws-lambda-tools-defaults.json files to support simple sh deployment

Added postman collection export

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 *.sln.docstates
 
 #aws deployment environment inspecific files
-aws-lambda-tools-defaults.json
+# aws-lambda-tools-defaults.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
